# Serverkit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DEV2_CONTRACTS.md  REPL_VERIFICATION.md  SERVERKIT_GUIDE.md  USER_GUIDE.md
examples/: README.md  log_audit.py  memory_audit.py  process_apps.py
serverkit/: __init__.py  config.py  config.template.jsonc  exceptions.py
serverkit/ai/: __init__.py  analyzer.py  jsonutil.py  ollama_client.py
serverkit/core/: __init__.py  collection.py  display.py  protocol.py  server.py
serverkit/cron/: manager.py
serverkit/disk/: __init__.py  manager.py
serverkit/docker/: __init__.py  container.py  manager.py
serverkit/env/: vars.py
serverkit/logs/: __init__.py  logfile.py  manager.py
serverkit/memory/: snapshot.py
serverkit/network/: manager.py
serverkit/output/: __init__.py  exporters.py  progress.py  tables.py  theme.py
serverkit/ports/: manager.py
serverkit/processes/: __init__.py  aliases.py  factory.py  history.py  manager.py  process.py
serverkit/remote/: __init__.py  connection.py  disk.py  executor.py  host_parsers.py  parsers.py  server.py  systemctl.py
serverkit/services/: manager.py
serverkit/shell/: __init__.py  autocomplete.py  banner.py  banner_skip.py  cli.py  lexer.py  mascot.py  menu.py  menu_tree.py  parser.py  repl.py  state.py  style.py
serverkit/systemctl/: manager.py
serverkit/users/: __init__.py  manager.py
serverkit/workflows/: __init__.py  builder.py  factory.py  manager.py  step.py  steps.py  validator.py  workflow.py
serverkit/workflows/catalog/: __init__.py  log_error_scan.json  memory_audit.json  nginx_health_check.json
serverkit/workflows/executors/: __init__.py  base.py  parallel.py  sequential.py
tests/: conftest.py  test_conditional_workflow.py  test_config.py  test_display_export.py  test_host_parsers.py  test_import.py  test_logfile.py  test_memory_disk.py  test_process_aliases.py  test_process_apps.py  test_process_depth.py  test_process_factory.py  test_process_manager.py  test_remote.py  test_system_mocks.py  test_workflow_builder.py  test_workflow_catalog.py  test_workflow_engine.py  test_workflows.py
tests/ai/: test_analyzer.py  test_jsonutil.py  test_ollama_client.py
tests/shell/: test_banner.py  test_banner_skip.py  test_cli.py  test_lexer.py  test_mascot.py  test_menu.py  test_parser.py  test_style.py
tests/workflows/: test_steps.py
