[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "serverkit"
version = "0.1.0"
description = "OOP Linux operations SDK with workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ServerKit Team" }]
dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
serverkit = "serverkit.shell.repl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["serverkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
