[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "serverkit"
version = "0.3.0"
description = "OOP Linux operations SDK with workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ServerKit Team" }]
dependencies = [
    "psutil>=5.9.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]
rich = [
    "rich>=13.0.0",
]
docker = [
    "docker>=7.0.0",
]
remote = [
    "paramiko>=3.0.0",
]
all = [
    "serverkit[dev,rich,docker,remote]",
]

[project.scripts]
serverkit = "serverkit.shell.repl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["serverkit*"]

[tool.setuptools.package-data]
"serverkit.workflows.catalog" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that touch the live OS",
]
