[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "serverkit"
version = "0.3.1"
description = "OOP Linux operations SDK with workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ServerKit Team" }]
keywords = ["linux", "server", "operations", "sdk", "workflows", "ssh", "systemd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "psutil>=5.9.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "requests>=2.28.0",
]
rich = [
    "rich>=13.0.0",
]
docker = [
    "docker>=7.0.0",
]
remote = [
    "paramiko>=3.0.0",
]
ai = [
    "requests>=2.28.0",
]
all = [
    "serverkit[dev,rich,docker,remote,ai]",
]

[project.scripts]
serverkit = "serverkit.shell.repl:main"

[project.urls]
Homepage = "https://github.com/aahil-khan/opscript"
Repository = "https://github.com/aahil-khan/opscript"
Documentation = "https://github.com/aahil-khan/opscript/blob/main/docs/USER_GUIDE.md"
"Bug Tracker" = "https://github.com/aahil-khan/opscript/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["serverkit*"]

[tool.setuptools.package-data]
"serverkit.workflows.catalog" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that touch the live OS",
]
